--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_STRING = mongodb+srv://sarah:wZOoces4o8deaBgH@cluster0.trnuq1i.mongodb.net/?retryWrites=true&w=majority
+DB_STRING = mongodb+srv://sarah:PLiiyhtXjFGuLOb3@cluster0.trnuq1i.mongodb.net/?retryWrites=true&w=majority
