connected to database

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DB_STRING = mongodb+srv://sarah:PLiiyhtXjFGuLOb3@cluster0.trnuq1i.mongodb.net/?retryWrites=true&w=majority
+DB_STRING = mongodb+srv://sarah:g6ly4c9IB2YZTdahkT2@cluster0.trnuq1i.mongodb.net/?retryWrites=true&w=majority
+PORT = 2000
